[gd_scene load_steps=11 format=3 uid="uid://ctqka31wjgyc"]

[ext_resource type="Script" path="res://scenes/actors/HostileActor.gd" id="1_gcm5v"]
[ext_resource type="Texture2D" uid="uid://bm2g3tuy7s53u" path="res://enemy.png" id="2_p2okg"]
[ext_resource type="Script" path="res://scripts/idle_wander.gd" id="3_dtdih"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l2h06"]
atlas = ExtResource("2_p2okg")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u7er"]
atlas = ExtResource("2_p2okg")
region = Rect2(1024, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_bilk2"]
atlas = ExtResource("2_p2okg")
region = Rect2(2048, 0, 1024, 1024)

[sub_resource type="SpriteFrames" id="SpriteFrames_mmdn3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2h06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u7er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bilk2")
}],
"loop": true,
"name": &"movement",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohi0u"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_rm320"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_dx440"]
points = PackedVector2Array(0, 0)

[node name="HostileActor" type="CharacterBody2D"]
process_mode = 1
modulate = Color(1, 0, 0.0745098, 1)
motion_mode = 1
slide_on_ceiling = false
script = ExtResource("1_gcm5v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(10, -3)
rotation = 0.958186
scale = Vector2(0.14, 0.14)
sprite_frames = SubResource("SpriteFrames_mmdn3")
animation = &"movement"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ohi0u")

[node name="Detection" type="Area2D" parent="."]

[node name="SenseCircle" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_rm320")

[node name="VisionCone" type="CollisionShape2D" parent="Detection"]
shape = SubResource("ConvexPolygonShape2D_dx440")

[node name="detectedStateUpdate" type="Timer" parent="."]

[node name="IdleWander" type="Timer" parent="."]
one_shot = true
script = ExtResource("3_dtdih")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="IdleWander" to="IdleWander" method="_on_timeout"]
